# pkis

./: .gitignore  .openwiki-exclude  AGENT_ROSTER_v2.md  ARCHITECT.md  ARCHITECTURE_AUDIT.md  AUDITOR.md  COMPTROLLER.md  CONTEXT.md  EXPLAINER_WORKFLOW.md  HYGIENIST.md  LAB_ASSISTANT.md  LIBRARIAN.md  MAINTENANCE.md  MCP_ACCESS_GUIDE.md  OAUTH_PLAN.md  PHASE_C_BRIEF.md  PKIS_Wiki_Implementation_Plan.md  README.md  SCHEMA.md  STRUCTURAL_RECOMMENDATIONS.md  SYNTHESIZER.md  adapters.py  app.py  ask.py  config.py  conversations.py  experiments.py  explainer_x.py  metrics.py  paths.py  pkis-product-overview.html  pyproject.toml  requirements.txt  shares.py  store.py  usage.py
.github/workflows/: test.yml
deploy/: nginx-pkis.conf
design/: STYLE_GUIDE.md  gallery.html  pkis_composed.html  pkis_style_browser.html  tokens.css
docs/: ABOUT.md  ARCHITECTURE.md  DECISIONS.md  EXPLAINER_ROADMAP.md  IDEAS.md  STATUS.md  USAGE.md  manifest.json
explainers/: typical-sets.html
lab-assistant/transformations/: README.md  cluster_staleness.py
openwiki/: .last-update.json  quickstart.md  testing.md
openwiki/architecture/: data-and-storage.md  server.md
openwiki/domain/: curation-and-lifecycle.md  knowledge-workflows.md
openwiki/operations/: tools-and-cron.md
scripts/: build_source_graph.py  iri_backfill.py
tests/: conftest.py
tests/contract/: test_mcp_tools.py  test_rest_parity.py
tools/: README.md  architect_audit.py  architect_audit_cron.sh  architect_cron.sh  architect_reconcile.py  audit_asset_kinds.py  book_extract_batch.sh  book_labels.py  book_outline.py  book_setup.py  book_split.py  build_reader_blei.py  comptroller.py  discovery_openalex.py  discovery_stubs_from_inbox.py  explainer_autosnapshot.sh  explainer_publish.sh  explainer_serve.sh  fill_missing.py  graph_audit.py  graph_audit_cron.sh  import_drive_books.py  lab_assistant_cron.sh  lab_monitor.py  lab_transform.py  link_sources_cron.sh  link_sources_driver.py  mackay_phasec_driver.py  mine_proposals.py  nightly_eval.py  openwiki_refresh.sh  reader_build.py  reader_split_book.py  reconcile_push.py  relabel_books.py  run_build.sh  search_harness.py  section_pages.py  split_by_nodes.py  voice_missing.sh
viewer/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
wiki/: asset_kinds.json  inbox.md  index.md  log.md  queue.md  source_graph.json  transcript-queue.md
(+3083 files in other folders)
